--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <div class="collapsible">
                             <button type="button" class="collapsible-button">Diálogo Sugerido</button>
                             <div class="collapsible-content">
-                                <p class="dialogue assistant">“Ahora escuchemos lo que descubrieron.<br><br>¿Qué idea o estrategia planean aplicar esta semana?<br>Puede ser algo como usar un bloqueador de apps, poner temporizador, o seguir cuentas que les hagan sentir bien.<br>Compartan su ‘perla de autocuidado’ con el grupo.”</p>
+                                <p class="dialogue assistant">“Ahora escuchemos lo que descubrieron.<br><br>¿Qué idea o estrategia planean aplicar esta semana?<br>Puede ser algo como usar un bloqueador de apps, poner temporizador, o seguir cuentas que les hagan sentir bien.<br>Gracias por compartir sus perlas. Ahora, como grupo, ¿cuál fue la emoción negativa más mencionada en nuestras conversaciones? ¿Y la estrategia de autocuidado más popular? ¿Qué nos dice eso?”</p>
                             </div>
                         </div>
                     </div>
